--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ branches:
 language: ruby
 before_install: openssl aes-256-cbc -K $encrypted_7aa52200b8fc_key -iv $encrypted_7aa52200b8fc_iv -in tests/keys/docusign_private_key.txt.enc -out tests/keys/docusign_private_key.txt -d
 # command to install dependencies
-install: bundle install
+install: cd tests/spec && bundle install
 # command to run tests
-script: cd tests/spec && bundle exec rspec unit_tests_using_jwt_spec.rb
+script: bundle exec rspec unit_tests_using_jwt_spec.rb
