--- a/.swagger-codegen-ignore
+++ b/.swagger-codegen-ignore
@@ -41,8 +41,11 @@ docusign_esign.gemspec
 # Specific src and test files
 .rspec
 docs/
+spec/
 tests/
 lib/docusign_esign.rb
-lib/docusign_esign/client
+lib/docusign_esign/client/
 lib/docusign_esign/version.rb
+lib/docusign_esign/api_client.rb
+lib/docusign_esign/api_error.rb
 lib/docusign_esign/configuration.rb
