--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+tests/docs/private.pem
