--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ language: ruby
 # command to install dependencies
 install: cd tests/spec && bundle install
 # command to run tests
-script: bundle exec rspec unit_tests_using_jwt_spec.rb --format documentation && bundle exec rspec unit_tests_spec.rb --format documentation
+script: bundle exec rspec unit_tests_spec.rb --format documentation
