--- a/.swagger-codegen-ignore
+++ b/.swagger-codegen-ignore
@@ -43,4 +43,6 @@ docusign_esign.gemspec
 docs/
 spec/
 tests/
+lib/docusign_esign/client/
 lib/docusign_esign/api_error.rb
+lib/docusign_esign/configuration.rb
